Fixed timeline and map vertical alignment. Added values to list

--- a/css/d3components.css
+++ b/css/d3components.css
@@ -5,7 +5,7 @@
 		}
 		#map, #demers {
 		    margin-left: -7em;
-		    margin-top: -7em;
+		    margin-top: -3.5em;
 		    width:930px;
 		    height: 650px;
 		    float: left;
@@ -74,6 +74,7 @@
 	    #slider{
 		    float: left;
 		    padding-left: 5px;
+		    margin-top: 4em;
 		    width: 830px;
 	    }
 
